# funlang

./: .gitignore  Cargo.toml  README.md  build.rs  out.ll
src/: ast.rs  fun.lalrpop  main.rs
src/codegen/: llvm_gen.rs  mod.rs  script.py
src/examples/: applytolist.fun  badpattern.fun  foldr.fun  if.fun  incomplete.fun  min.fun  primes.fun  types.fun
src/graph/: compile.rs  compile_visit.rs  instructions.rs  mod.rs  out.ll  stack_env.rs
src/runtime/: Makefile  Makefile~  a.out  gmachine.c  gmachine.h  node.c  node.h  out.ll  rt_dump  runtime.c  runtime.h  stack.c  stack.h  test.c
src/runtime/a.out.dSYM/Contents/Resources/DWARF/: a.out
src/testutils/: llvm_translate.py  out.ll
src/types/: call_graph.rs  free_var_visit.rs  mod.rs  type_env.rs  type_visit.rs  typecheck.rs
