[package]
name = "fun"
version = "0.1.0"
authors = ["amit"]
edition = "2018"


[build-dependencies]
lalrpop = { version = "0.18.1", features = [ "lexer" ] }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lalrpop-util = "0.18.1"
id-arena = { version = "2" }
regex = "1"
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm12-0"] }
clap = "~2.27.0"